--- a/Practice_data_structure_practice.ipynb
+++ b/Practice_data_structure_practice.ipynb
@@ -156,7 +156,7 @@
         "colab_type": "text"
       },
       "source": [
-        "You are been given a list of integers and you have to write a function for calculating the square of even integers and a cube of odd integers. After then, you have to return the results in a new list.\n",
+        "You are given a list of integers and you have to write a function for calculating the square of even integers and a cube of odd integers. After then, you have to return the results in a new list.\n",
         "\n",
         "Hint :\n",
         "*   Input : One list of integers Ex: [x, y, z]\n",
